@@ -1,3 +1,8 @@
+2011-03-15	The InnoDB Team
+
+	* btr/btr0cur.c, page/page0zip.c:
+	Fix Bug#11849231 inflateInit() invoked without initializing all memory
+
 2011-02-28	The InnoDB Team
 
 	* btr/btr0sea.c, buf/buf0buf.c, buf/buf0lru.c:
